--- a/index.html
+++ b/index.html
@@ -14,8 +14,6 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/tone/14.7.77/Tone.js"></script>
     <!-- YouTube Iframe API -->
     <script src="https://www.youtube.com/iframe_api"></script>
-    <!-- Lottie Player Script -->
-    <script src="https://unpkg.com/@lottiefiles/lottie-player@latest/dist/lottie-player.js"></script>
     <style>
         body {
             font-family: 'Inter', sans-serif;
@@ -150,56 +148,42 @@
         </div>
     </header>
 
-    <!-- Solutions and Advantages Section -->
+    <!-- Outsourcing Solutions Section -->
     <section class="py-20 bg-white">
         <div class="container mx-auto px-6">
-            <div class="grid grid-cols-1 md:grid-cols-2 gap-8 mb-16">
-                <div class="bg-teal-600 rounded-2xl p-8 text-white flex justify-between items-center">
-                    <div>
-                        <h3 class="text-2xl font-bold mb-4">Soluciones y ventajas para partners</h3>
-                        <a href="#" class="border border-white rounded-full px-6 py-2 text-sm font-semibold hover:bg-white hover:text-teal-600 transition">MÁS INFORMACIÓN</a>
-                    </div>
-                    <svg class="w-32 h-32 opacity-30" viewBox="0 0 150 100" fill="none" xmlns="http://www.w3.org/2000/svg">
-                        <path d="M106 58L106 84" stroke="white" stroke-width="2"/>
-                        <path d="M114 66L114 84" stroke="white" stroke-width="2"/>
-                        <path d="M122 50L122 84" stroke="white" stroke-width="2"/>
-                        <rect x="102" y="84" width="24" height="4" fill="white"/>
-                        <path d="M130 88L130 74L138 74V88H130Z" fill="white"/>
-                        <path d="M94 70C96.2091 70 98 68.2091 98 66C98 63.7909 96.2091 62 94 62C91.7909 62 90 63.7909 90 66C90 68.2091 91.7909 70 94 70Z" stroke="white" stroke-width="2"/>
-                        <path d="M94 66L94 50" stroke="white" stroke-width="2"/>
-                        <path d="M86.1213 58.1213L94 50.2426L101.879 58.1213" stroke="white" stroke-width="2"/>
-                        <path d="M80 42C81.1046 42 82 41.1046 82 40C82 38.8954 81.1046 38 80 38C78.8954 38 78 38.8954 78 40C78 41.1046 78.8954 42 80 42Z" stroke="white" stroke-width="2"/>
-                        <path d="M72 46C73.1046 46 74 45.1046 74 44C74 42.8954 73.1046 42 72 42C70.8954 42 70 42.8954 70 44C70 45.1046 70.8954 46 72 46Z" stroke="white" stroke-width="2"/>
-                    </svg>
-                </div>
-                <div class="bg-teal-600 rounded-2xl p-8 text-white flex justify-between items-center">
-                    <div>
-                        <h3 class="text-2xl font-bold mb-4">Soluciones y ventajas para clientes</h3>
-                        <a href="#" class="border border-white rounded-full px-6 py-2 text-sm font-semibold hover:bg-white hover:text-teal-600 transition">MÁS INFORMACIÓN</a>
-                    </div>
-                     <svg class="w-32 h-32 opacity-30" viewBox="0 0 150 100" fill="none" xmlns="http://www.w3.org/2000/svg">
-                        <path d="M106 58L106 84" stroke="white" stroke-width="2"/>
-                        <path d="M114 66L114 84" stroke="white" stroke-width="2"/>
-                        <path d="M122 50L122 84" stroke="white" stroke-width="2"/>
-                        <rect x="102" y="84" width="24" height="4" fill="white"/>
-                        <path d="M130 88L130 74L138 74V88H130Z" fill="white"/>
-                        <path d="M94 70C96.2091 70 98 68.2091 98 66C98 63.7909 96.2091 62 94 62C91.7909 62 90 63.7909 90 66C90 68.2091 91.7909 70 94 70Z" stroke="white" stroke-width="2"/>
-                        <path d="M94 66L94 50" stroke="white" stroke-width="2"/>
-                        <path d="M86.1213 58.1213L94 50.2426L101.879 58.1213" stroke="white" stroke-width="2"/>
-                        <path d="M80 42C81.1046 42 82 41.1046 82 40C82 38.8954 81.1046 38 80 38C78.8954 38 78 38.8954 78 40C78 41.1046 78.8954 42 80 42Z" stroke="white" stroke-width="2"/>
-                        <path d="M72 46C73.1046 46 74 45.1046 74 44C74 42.8954 73.1046 42 72 42C70.8954 42 70 42.8954 70 44C70 45.1046 70.8954 46 72 46Z" stroke="white" stroke-width="2"/>
-                    </svg>
-                </div>
+            <div class="text-center mb-12">
+                <h2 class="text-4xl font-bold text-gray-800 mb-4 border-b-4 border-lime-500 inline-block pb-2">Nuestras Soluciones de Outsourcing de Impresión</h2>
+                <p class="text-lg text-gray-600 mt-4">Diseñamos un ecosistema de impresión a la medida de tus objetivos.</p>
             </div>
-            <div class="w-full">
-                <lottie-player
-                    src="https://lottie.host/96150f1c-2cfd-43d8-8fd5-1d214b5175f3/ZkgFveGJD6.json"
-                    background="transparent"
-                    speed="1"
-                    style="width: 100%; height: 300px;"
-                    loop
-                    autoplay>
-                </lottie-player>
+            <div class="grid grid-cols-1 md:grid-cols-2 gap-8">
+                <div class="bg-gray-50 p-8 rounded-2xl shadow-lg flex items-start space-x-4">
+                    <i data-lucide="printer" class="h-8 w-8 text-lime-500"></i>
+                    <div>
+                        <h3 class="text-2xl font-bold text-gray-800 mb-2">Gestión de Flota de Impresión</h3>
+                        <p class="text-gray-600">Equipos, consumibles, mantenimiento y soporte en un único servicio predecible.</p>
+                    </div>
+                </div>
+                <div class="bg-gray-50 p-8 rounded-2xl shadow-lg flex items-start space-x-4">
+                    <i data-lucide="file-scan" class="h-8 w-8 text-lime-500"></i>
+                    <div>
+                        <h3 class="text-2xl font-bold text-gray-800 mb-2">Digitalización y Gestión Documental</h3>
+                        <p class="text-gray-600">Convierta sus archivos en activos digitales seguros, accesibles y fáciles de gestionar.</p>
+                    </div>
+                </div>
+                <div class="bg-gray-50 p-8 rounded-2xl shadow-lg flex items-start space-x-4">
+                    <i data-lucide="lock" class="h-8 w-8 text-lime-500"></i>
+                    <div>
+                        <h3 class="text-2xl font-bold text-gray-800 mb-2">Impresión Segura</h3>
+                        <p class="text-gray-600">Proteja su información confidencial con soluciones de autenticación y control de acceso.</p>
+                    </div>
+                </div>
+                <div class="bg-gray-50 p-8 rounded-2xl shadow-lg flex items-start space-x-4">
+                    <i data-lucide="leaf" class="h-8 w-8 text-lime-500"></i>
+                    <div>
+                        <h3 class="text-2xl font-bold text-gray-800 mb-2">Sostenibilidad</h3>
+                        <p class="text-gray-600">Reduzca su huella de carbono con equipos eficientes y políticas de impresión inteligentes.</p>
+                    </div>
+                </div>
             </div>
         </div>
     </section>
@@ -269,58 +253,6 @@
                  <button data-index="2" class="marca-button bg-white p-4 rounded-lg shadow-md hover:shadow-xl">
                     <img src="https://i.postimg.cc/W12FkM0K/kyocera-logo.png" alt="Kyocera" class="h-10">
                 </button>
-            </div>
-        </div>
-    </section>
-
-    <!-- Blog Section -->
-    <section id="blog" class="py-20 bg-white">
-        <div class="container mx-auto px-6 text-center">
-            <h2 class="text-3xl font-bold text-gray-800 mb-4">BLOG</h2>
-            <h3 class="text-xl text-gray-600 mb-12">Archivos digitales de actualidad</h3>
-            <div class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3 gap-8">
-                <!-- Blog Post 1 -->
-                <div class="bg-gray-100 rounded-lg shadow-md hover:shadow-xl transition duration-300">
-                    <img src="https://i.postimg.cc/VLTPtfV9/111111.png" alt="El Futuro de la Digitalización" class="rounded-t-lg w-full">
-                    <div class="p-6 text-left">
-                        <h4 class="text-lg font-semibold text-gray-800 mb-2">El Futuro de la Digitalización Empresarial</h4>
-                        <p class="text-gray-600 text-sm mb-4">
-                            No podemos seguir ignorando la transformación digital en el mundo de los negocios.
-                        </p>
-                        <a href="#" class="text-lime-500 hover:text-lime-600 font-semibold flex items-center">
-                            Leer blog
-                            <i data-lucide="arrow-right" class="h-4 w-4 ml-2"></i>
-                        </a>
-                    </div>
-                </div>
-                <!-- Blog Post 2 -->
-                <div class="bg-gray-100 rounded-lg shadow-md hover:shadow-xl transition duration-300">
-                    <img src="https://i.postimg.cc/rynB6yM6/impresora-lexmark-mx722adhe-duplex-70ppm-impresoras-25b0001-tcws-2.png" alt="Guía Rápida" class="rounded-t-lg w-full">
-                    <div class="p-6 text-left">
-                        <h4 class="text-lg font-semibold text-gray-800 mb-2">Guía rápida para una transformación digital exitosa</h4>
-                        <p class="text-gray-600 text-sm mb-4">
-                            Descubre los pasos clave para implementar la tecnología en tu empresa.
-                        </p>
-                        <a href="#" class="text-lime-500 hover:text-lime-600 font-semibold flex items-center">
-                            Leer blog
-                            <i data-lucide="arrow-right" class="h-4 w-4 ml-2"></i>
-                        </a>
-                    </div>
-                </div>
-                <!-- Blog Post 3 -->
-                <div class="bg-gray-100 rounded-lg shadow-md hover:shadow-xl transition duration-300">
-                    <img src="https://i.postimg.cc/QxVrV90x/5555.png" alt="Pantallas Digitales" class="rounded-t-lg w-full">
-                    <div class="p-6 text-left">
-                        <h4 class="text-lg font-semibold text-gray-800 mb-2">Pantallas Digitales: La clave para transformar la cultura</h4>
-                        <p class="text-gray-600 text-sm mb-4">
-                            Transforma la comunicación corporativa mediante la comunicación interna.
-                        </p>
-                        <a href="#" class="text-lime-500 hover:text-lime-600 font-semibold flex items-center">
-                            Leer blog
-                            <i data-lucide="arrow-right" class="h-4 w-4 ml-2"></i>
-                        </a>
-                    </div>
-                </div>
             </div>
         </div>
     </section>
